# apteryx

./: .env  .gitignore  Makefile  Procfile  README.md  Vagrantfile  apteryx.cabal  cpkg.cabal  s3apt.cabal
apteryx-build/: Main.hs
apteryx-copy/: Main.hs
apteryx-server/: Main.hs
apteryx-upload/: Main.hs
apteryx/Control/Concurrent/: ThreadPool.hs
apteryx/Network/APT/: S3.hs
apteryx/System/APT/: Compression.hs  IO.hs  Index.hs  Log.hs  Options.hs  Package.hs  Store.hs  Types.hs
apteryx/System/APT/Package/: Control.hs
cpkg-build/: Main.hs
cpkg-server/: Main.hs
cpkg-upload/: Main.hs
cpkg/Network/APT/: S3.hs
cpkg/System/APT/: IO.hs  Log.hs  Package.hs  Types.hs
deb/DEBIAN/: control  postinst  preinst  prerm
deb/etc/apteryx-server/: .env
deb/etc/sv/apteryx-server/: run
deb/etc/sv/apteryx-server/log/: run
s3apt-indexer/: Main.hs
s3apt-indexer/S3Apt/: Server.hs
s3apt-rebuild/: Main.hs
s3apt-server/: Main.hs
s3apt-upload/: Main.hs
s3apt/S3Apt/: IO.hs  Log.hs  Options.hs  Package.hs  S3.hs  Text.hs  Types.hs
test/: Main.hs
test/Test/APT/: Parsing.hs
