name:                  apteryx
version:               0.1.0
synopsis:              S3 Backed APT Repository
homepage:              http://github.com/brendanhay/apteryx
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2014 Brendan Hay
stability:             Experimental
category:              APT, AWS, Cloud, Infrastructure
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/apteryx.git

library
    default-language:  Haskell2010
    hs-source-dirs:    apteryx
    ghc-options:
        -Wall

    exposed-modules:
          System.APT.IO
        , System.APT.Log
        , System.APT.Options
        , System.APT.Package
        , System.APT.Index
        , System.APT.Store
        , System.APT.Types

    build-depends:
          amazonka             >= 0.4.1
        , async
        , attoparsec
        , base                 >= 4.6 && < 5
        , base16-bytestring
        , base64-bytestring
        , byteable
        , bytestring           >= 0.10.4
        , bytestring-from
        , case-insensitive
        , conduit              >= 0.1.1
        , conduit-extra
        , containers
        , cryptohash
        , cryptohash-conduit
        , deepseq
        , directory
        , errors
        , exceptions
        , filepath
        , http-conduit
        , http-types
        , mmorph
        , monad-par
        , monad-par-extras
        , old-locale
        , optparse-applicative
        , process
        , stm
        , temporary
        , text
        , text-format
        , time
        , tinylog              >= 0.8
        , transformers
        , unix
        , zlib

-- executable apteryx-build
--     main-is:            Main.hs
--     hs-source-dirs:     apteryx-build
--     default-language:   Haskell2010
--     ghc-options:        -Wall -threaded -with-rtsopts=-N

--     build-depends:
--           amazonka
--         , async
--         , apteryx
--         , base
--         , bytestring
--         , optparse-applicative
--         , text
--         , transformers

-- executable apteryx-upload
--     main-is:            Main.hs
--     hs-source-dirs:     apteryx-upload
--     default-language:   Haskell2010
--     ghc-options:
--         -threaded
--         -Wall
--         -with-rtsopts=-T
--         -funbox-strict-fields

--     build-depends:
--           apteryx
--         , base
--         , bytestring
--         , conduit-extra
--         , either
--         , exceptions
--         , optparse-applicative

executable apteryx-server
    main-is:            Main.hs
    hs-source-dirs:     apteryx-server
    default-language:   Haskell2010
    ghc-options:
        -threaded
        -Wall
        -with-rtsopts=-N
        -with-rtsopts=-T
        -funbox-strict-fields

    build-depends:
          apteryx
        , base
        , bytestring
        , directory
        , either
        , exceptions
        , filepath
        , http-conduit
        , http-reverse-proxy
        , http-types
        , mtl
        , optparse-applicative
        , time
        , tinylog
        , transformers
        , wai
        , wai-extra
        , wai-predicates       >= 0.4
        , wai-routing
        , warp
