name:                  apteryx
version:               0.1.0
synopsis:              S3 Backed APT Repository
homepage:              http://github.com/brendanhay/apteryx
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2014 Brendan Hay
stability:             Experimental
category:              APT, AWS, Cloud, Infrastructure
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/apteryx.git

library
    default-language:  Haskell2010
    hs-source-dirs:    apteryx
    ghc-options:
        -Wall

    exposed-modules:
          System.APT.Compression
        , System.APT.IO
        , System.APT.Index
        , System.APT.Log
        , System.APT.Options
        , System.APT.Package
        , System.APT.Package.Control
        , System.APT.Store
        , System.APT.Types

    other-modules:

    build-depends:
          amazonka             >= 0.4.4
        , async
        , attoparsec
        , base                 >= 4.6 && < 5
        , base16-bytestring
        , base64-bytestring
        , byteable
        , bytestring           >= 0.10.4
        , bytestring-from
        , bzlib
        , bzlib-conduit
        , case-insensitive
        , conduit              >= 0.1.1
        , conduit-extra
        , containers
        , cryptohash
        , cryptohash-conduit
        , deepseq
        , directory
        , errors
        , exceptions
        , filepath
        , http-conduit
        , http-date
        , http-types
        , mmorph
        , monad-par
        , monad-par-extras
        , mtl                  == 2.1.*
        , optparse-applicative
        , process
        , resourcet
        , stm
        , temporary
        , text
        , text-format
        , time
        , tinylog              >= 0.8
        , transformers         == 0.3.*
        , unix

executable apteryx-copy
    main-is:            Main.hs
    hs-source-dirs:     apteryx-copy
    default-language:   Haskell2010
    ghc-options:        -Wall -threaded -with-rtsopts=-N

    build-depends:
          amazonka
        , async
        , apteryx
        , base
        , bytestring
        , optparse-applicative
        , text
        , transformers

executable apteryx-upload
    main-is:            Main.hs
    hs-source-dirs:     apteryx-upload
    default-language:   Haskell2010
    ghc-options:        -Wall -threaded
    build-depends:
          apteryx
        , base
        , bytestring
        , conduit-extra
        , either
        , exceptions
        , optparse-applicative

-- executable apteryx-server
--     main-is:            Main.hs
--     hs-source-dirs:     apteryx-server
--     default-language:   Haskell2010
--     ghc-options:        -Wall -threaded -with-rtsopts=-N

--     build-depends:
--           amazonka
--         , apteryx
--         , base
--         , bytestring
--         , errors
--         , exceptions
--         , filepath
--         , http-conduit
--         , http-reverse-proxy
--         , http-types
--         , mtl
--         , optparse-applicative
--         , text
--         , tinylog
--         , transformers
--         , wai
--         , wai-extra
--         , wai-predicates       >= 0.4
--         , wai-routing
--         , warp

-- test-suite tests
--     default-language:   Haskell2010
--     type:               exitcode-stdio-1.0
--     hs-source-dirs:     test
--     main-is:            Main.hs
--     ghc-options:        -Wall -threaded -with-rtsopts=-N

--     build-depends:
--           apteryx
--         , base
--         , bytestring
--         , case-insensitive
--         , containers
--         , errors
--         , tasty
--         , tasty-hunit
