name:                  cpkg
version:               0.1.0
synopsis:              S3 Backed APT Repository
homepage:              http://github.com/brendanhay/cpkg
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2014 Brendan Hay
stability:             Experimental
category:              APT, AWS, Cloud, Infrastructure
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/cpkg.git

library
    default-language:  Haskell2010
    hs-source-dirs:    cpkg
    ghc-options:
        -Wall

    exposed-modules:
          Network.APT.S3
        , System.APT.IO
        , System.APT.Log
        , System.APT.Options
        , System.APT.Package
        , System.APT.Types

    build-depends:
          amazonka             >= 0.3.1
        , async
        , attoparsec
        , base                 >= 4.6 && < 5
        , base64-bytestring
        , byteable
        , bytestring           >= 0.10.4
        , case-insensitive
        , conduit              >= 0.1.1
        , conduit-extra
        , containers
        , cryptohash
        , cryptohash-conduit
        , deepseq
        , directory
        , errors
        , http-types
        , optparse-applicative
        , process
        , system-filepath
        , text
        , text-format
        , transformers
        , unix

executable cpkg-upload
    main-is:            Main.hs
    hs-source-dirs:     cpkg-upload
    default-language:   Haskell2010
    ghc-options:
        -threaded
        -Wall
        -with-rtsopts=-T
        -funbox-strict-fields

    build-depends:
          amazonka
        , base
        , conduit-extra
        , http-conduit
        , optparse-applicative
        , cpkg
        , system-filepath
        , text
        , transformers

executable cpkg-build
    main-is:            Main.hs
    hs-source-dirs:     cpkg-build
    default-language:   Haskell2010
    ghc-options:
        -threaded
        -Wall
        -with-rtsopts=-N
        -with-rtsopts=-T
        -funbox-strict-fields

    build-depends:
          amazonka
        , async
        , base
        , conduit
        , exceptions
        , http-conduit
        , http-types
        , mmorph
        , optparse-applicative
        , cpkg
        , stm
        , text
        , transformers

-- executable cpkg-server
--     main-is:            Main.hs
--     hs-source-dirs:     cpkg-server
--     default-language:   Haskell2010
--     ghc-options:
--         -threaded
--         -Wall
--         -with-rtsopts=-N
--         -with-rtsopts=-T
--         -funbox-strict-fields

--     build-depends:
--           base
--         , bytestring
--         , errors
--         , exceptions
--         , http-types
--         , mtl
--         , optparse-applicative
--         , cpkg
--         , system-filepath
--         , text
--         , tinylog
--         , wai
--         , wai-extra
--         , wai-predicates       >= 0.4
--         , wai-routing
--         , warp
