name:                  s3apt
version:               0.1.0
synopsis:              S3 Backed APT Repository
homepage:              http://github.com/brendanhay/s3apt
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2014 Brendan Hay
stability:             Experimental
category:              AWS, Cloud, Infrastructure
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/s3apt.git

library
    default-language:  Haskell2010
    hs-source-dirs:    s3apt
    ghc-options:
        -Wall

    exposed-modules:
          S3Apt.IO

    other-modules:

    build-depends:
          base                 >= 4.6 && < 5
        , directory
        , optparse-applicative
        , text

executable s3apt-rebuild
    main-is:            Main.hs
    hs-source-dirs:     s3apt-rebuild
    default-language:   Haskell2010
    ghc-options:
        -threaded
        -Wall
        -with-rtsopts=-N
        -with-rtsopts=-T

    build-depends:
          amazonka
        , base
        , conduit              >= 0.1.1
        , conduit-extra
        , containers
        , directory
        , http-types
        , http-conduit
        , optparse-applicative
        , s3apt
        , text
        , transformers

executable s3apt-indexer
    main-is:            Main.hs
    hs-source-dirs:     s3apt-indexer
    default-language:   Haskell2010
    ghc-options:
        -threaded
        -Wall
        -with-rtsopts=-N
        -with-rtsopts=-T

    build-depends:
          async
        , base
        , directory
        , fsnotify
        , optparse-applicative
        , s3apt
        , stm
        , system-filepath
        , text
        , unix
