name:                  s3apt
version:               0.1.0
synopsis:              S3 Backed APT Repository
homepage:              http://github.com/brendanhay/s3apt
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2014 Brendan Hay
stability:             Experimental
category:              AWS, Cloud, Infrastructure
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/s3apt.git

library
    default-language:  Haskell2010
    hs-source-dirs:    s3apt
    ghc-options:
        -Wall

    exposed-modules:
          S3Apt.IO
        , S3Apt.Types

    other-modules:

    build-depends:
          base                 >= 4.6 && < 5
        , byteable
        , bytestring
        , directory
        , optparse-applicative
        , system-filepath
        , text

-- executable s3apt-rebuild
--     main-is:            Main.hs
--     hs-source-dirs:     s3apt-rebuild
--     default-language:   Haskell2010
--     ghc-options:
--         -threaded
--         -Wall
--         -with-rtsopts=-N
--         -with-rtsopts=-T
--      -funbox-strict-fields
--     build-depends:
--           amazonka
--         , base
--         , conduit              >= 0.1.1
--         , conduit-extra
--         , containers
--         , directory
--         , http-types
--         , http-conduit
--         , optparse-applicative
--         , s3apt
--         , system-filepath
--         , text
--         , transformers

executable s3apt-server
    main-is:            Main.hs
    hs-source-dirs:     s3apt-server
    default-language:   Haskell2010
    ghc-options:
        -threaded
        -Wall
        -with-rtsopts=-N
        -with-rtsopts=-T
        -funbox-strict-fields

    build-depends:
          amazonka
        , async
        , attoparsec
        , base
        , base64-bytestring
        , byteable
        , bytestring
        , case-insensitive
        , conduit              >= 0.1.1
        , conduit-extra
        , containers
        , cryptohash
        , cryptohash-conduit
        , deepseq
        , directory
        , errors
        , http-client
        , http-conduit
        , optparse-applicative
        , process
        , s3apt
        , stm
        , system-filepath
        , temporary
        , text
        , unix

        , tinylog
        , mtl
        , http-types
        , exceptions
        , wai
        , wai-extra
        , wai-predicates       >= 0.4
        , wai-routing
        , wai-route            >= 0.1.2
        , warp
        , either
        , transformers
