name:                  s3apt
version:               0.1.0
synopsis:              S3 Backed APT Repository
homepage:              http://github.com/brendanhay/s3apt
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2014 Brendan Hay
stability:             Experimental
category:              AWS, Cloud, Infrastructure
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/s3apt.git

library
    default-language:  Haskell2010
    hs-source-dirs:    s3apt
    ghc-options:
        -Wall

    exposed-modules:
          S3Apt.IO
        , S3Apt.Log
        , S3Apt.Package
        , S3Apt.S3
        , S3Apt.Text
        , S3Apt.Types

    build-depends:
          amazonka             >= 0.3.1
        , async
        , attoparsec
        , base                 >= 4.6 && < 5
        , base64-bytestring
        , byteable
        , bytestring           >= 0.10.4
        , case-insensitive
        , conduit              >= 0.1.1
        , conduit-extra
        , containers
        , cryptohash
        , cryptohash-conduit
        , deepseq
        , directory
        , errors
        , http-types
        , optparse-applicative
        , process
        , system-filepath
        , text
        , text-format
        , transformers
        , unix

        , http-conduit

executable s3apt-upload
    main-is:            Main.hs
    hs-source-dirs:     s3apt-upload
    default-language:   Haskell2010
    ghc-options:
        -threaded
        -Wall
        -with-rtsopts=-T
        -funbox-strict-fields

    build-depends:
          amazonka
        , base
        , conduit
        , conduit-extra
        , http-conduit
        , optparse-applicative
        , s3apt
        , system-filepath
        , text
        , transformers

-- executable s3apt-server
--     main-is:            Main.hs
--     hs-source-dirs:     s3apt-server
--     default-language:   Haskell2010
--     ghc-options:
--         -threaded
--         -Wall
--         -with-rtsopts=-N
--         -with-rtsopts=-T
--         -funbox-strict-fields

--     build-depends:
--           base
--         , bytestring
--         , errors
--         , exceptions
--         , http-types
--         , mtl
--         , optparse-applicative
--         , s3apt
--         , system-filepath
--         , text
--         , tinylog
--         , wai
--         , wai-extra
--         , wai-predicates       >= 0.4
--         , wai-routing
--         , warp

-- executable s3apt-rebuild
--     main-is:            Main.hs
--     hs-source-dirs:     s3apt-rebuild
--     default-language:   Haskell2010
--     ghc-options:
--         -threaded
--         -Wall
--         -with-rtsopts=-N
--         -with-rtsopts=-T
--         -funbox-strict-fields

--     build-depends:
--           amazonka
--         , base
--         , bytestring
--         , conduit
--         , containers
--         , exceptions
--         , http-conduit
--         , http-types
--         , mmorph
--         , optparse-applicative
--         , s3apt
--         , text
--         , text-format
--         , transformers
